--- a/p8105_hw5_az2852.Rmd
+++ b/p8105_hw5_az2852.Rmd
@@ -52,7 +52,9 @@ Make a plot showing the probability as a function of group size, and comment on 
 ggplot(bday_sim, aes(x = n, y = prob))+
   geom_line()
 ```
-Problem 2
+
+# Problem 2
+
 When designing an experiment or analysis, a common question is whether it is likely that a true effect will be detected – put differently, whether a false null hypothesis will be rejected. The probability that a false null hypothesis is rejected is referred to as power, and it depends on several factors, including: the sample size; the effect size; and the error variance. In this problem, you will conduct a simulation to explore power in a one-sample t-test.
 
 First set the following design elements:
@@ -64,17 +66,17 @@ Generate 5000 datasets from the model
 
 𝑥∼𝑁𝑜𝑟𝑚𝑎𝑙[𝜇,𝜎]
 
-For each dataset, save 𝜇̂ 
- and the p-value arising from a test of 𝐻:𝜇=0
- using 𝛼=0.05
+For each dataset, save 𝜇̂ and the p-value arising from a test of 𝐻:𝜇=0 using 𝛼=0.05
 ```{r}
+# write a function that generates a normal vector with n = 30, mean = 0, sd = 5
 generate_normal_fixed = function(n = 30, mean = 0, sd = 5) {
   norm_vec = rnorm(n = n, mean = mean, sd = sd)
   return (norm_vec)
 }
+#check that the function works
 generate_normal_fixed()
 
-# Generate 5000 datasets
+# Generate 5000 datasets, conduct a t-test for each dataset, save the estimate and p-value
 fixed_sim_df = tibble(
   iter = 1:5000,
   data = map(1:5000, ~generate_normal_fixed(n = 30, mean = 0, sd = 5))) %>% 
@@ -105,6 +107,8 @@ sim_df = expand_grid(
   ) %>% 
   unnest(tidy_res) %>% 
   select(iter, pop_mean, estimate, p.value)
+
+sim_df
 ```
 Make a plot showing the proportion of times the null was rejected (the power of the test) on the y axis and the true value of 𝜇on the x axis. Describe the association between effect size and power.
 ```{r}
@@ -125,15 +129,10 @@ power_df %>%
   ) +
   theme_minimal()
 ```
-Power increases as effect size increases. The increase in power is sharp at first and then gradually slows down as power gets close to 1.
 
-Make a plot showing the average estimate of 𝜇̂ 
- on the y axis and the true value of 𝜇
- on the x axis. Make a second plot (or overlay on the first) the average estimate of 𝜇̂ 
- only in samples for which the null was rejected on the y axis and the true value of 𝜇
- on the x axis. Is the sample average of 𝜇̂ 
- across tests for which the null is rejected approximately equal to the true value of 𝜇
-? Why or why not?
+Power increases as effect size increases. The increase in power is sharp at first as true mean increases and then slows down as power gets close to 1.
+
+Make a plot showing the average estimate of 𝜇̂ on the y axis and the true value of 𝜇on the x axis. Make a second plot (or overlay on the first) the average estimate of 𝜇̂ only in samples for which the null was rejected on the y axis and the true value of 𝜇on the x axis. Is the sample average of 𝜇̂ across tests for which the null is rejected approximately equal to the true value of 𝜇? Why or why not?
 ```{r}
 
 # calculate average estimates for all samples and for samples where null was rejected
@@ -159,6 +158,7 @@ ggplot(summary_df, aes(x = pop_mean)) +
   theme_minimal()
 
 ```
+
 The average estimate mu_hat for which the null is rejected is not approximately equal to the true mean. Rather, the average estimates for rejected samples are higher because only samples with larger estimates (further from 0) are more likely to reject the null hypothesis.
 
 # Problem 3
@@ -174,8 +174,9 @@ summary(homicide_raw_df)
 ```
 The original data contains 52179 rows and 12 columns. Important variables include reported data, victim's first and last name, victim_race <chr>, victim_age <chr> victim_sex <chr>, city, state, latitude and longitude, and disposition <chr>. There is a significant amount of missing data in variables victim_race, victim_age, and victim_sex.
 
-Describe the raw data. Create a city_state variable (e.g. “Baltimore, MD”) and then summarize within cities to obtain the total number of homicides and the number of unsolved homicides (those for which the disposition is “Closed without arrest” or “Open/No arrest”).
+Create a city_state variable (e.g. “Baltimore, MD”) and then summarize within cities to obtain the total number of homicides and the number of unsolved homicides (those for which the disposition is “Closed without arrest” or “Open/No arrest”).
 ```{r}
+#create a city_state variable
 homicide_df = homicide_raw_df %>%
   mutate(city_state = str_c(city, state, sep = ", "))
 
@@ -204,7 +205,7 @@ prop_test_baltimore = prop.test(unsolved_baltimore, total_baltimore)
 tidy(prop_test_baltimore) %>% 
   select(estimate, conf.low, conf.high)
 ```
-run prop.test for each of the cities in your dataset, and extract both the proportion of unsolved homicides and the confidence interval for each. Do this within a “tidy” pipeline, making use of purrr::map, purrr::map2, list columns and unnest as necessary to create a tidy dataframe with estimated proportions and CIs for each city.
+Run prop.test for each of the cities in your dataset, and extract both the proportion of unsolved homicides and the confidence interval for each. Do this within a “tidy” pipeline, making use of purrr::map, purrr::map2, list columns and unnest as necessary to create a tidy dataframe with estimated proportions and CIs for each city.
 ```{r}
 # For each city, calculate the number of unsolved homicides and total homicides
 results_df = 
@@ -221,19 +222,20 @@ homicide_df %>%
   unnest(tidy_res) %>%
   select(city_state, estimate, conf.low, conf.high)
 
+results_df
 ```
 Create a plot that shows the estimates and CIs for each city – check out geom_errorbar for a way to add error bars based on the upper and lower limits. Organize cities according to the proportion of unsolved homicides.
-```{r}
+```{r fig.height=8, fig.width=8}
 ggplot(results_df, aes(x = reorder(city_state, estimate), y = estimate)) +
-  geom_point(color = "blue", size = 2) +  # Plot the estimated proportion as points
-  geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = 0.2) +  # Add error bars (confidence intervals)
+  geom_point(color = "blue", size = 2) +  
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = 0.2) +  
   labs(
     x = "City",
     y = "Estimated Proportion of Unsolved Homicides",
     title = "Estimated Proportion of Unsolved Homicides with 95% CI"
   ) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +  # Rotate x-axis labels for readability
-  coord_flip()  # Flip the coordinates for better visibility of city names
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +  
+  coord_flip()
 
 ggsave("homicide_plot.png", height = 8, width = 8, units = "in")
 ```
