--- a/p8105_hw5_az2852.md
+++ b/p8105_hw5_az2852.md
@@ -68,13 +68,16 @@ ggplot(bday_sim, aes(x = n, y = prob))+
 ```
 
 ![](p8105_hw5_az2852_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
-Problem 2 When designing an experiment or analysis, a common question is
-whether it is likely that a true effect will be detected – put
-differently, whether a false null hypothesis will be rejected. The
-probability that a false null hypothesis is rejected is referred to as
-power, and it depends on several factors, including: the sample size;
-the effect size; and the error variance. In this problem, you will
-conduct a simulation to explore power in a one-sample t-test.
+
+# Problem 2
+
+When designing an experiment or analysis, a common question is whether
+it is likely that a true effect will be detected – put differently,
+whether a false null hypothesis will be rejected. The probability that a
+false null hypothesis is rejected is referred to as power, and it
+depends on several factors, including: the sample size; the effect size;
+and the error variance. In this problem, you will conduct a simulation
+to explore power in a one-sample t-test.
 
 First set the following design elements:
 
@@ -86,10 +89,12 @@ For each dataset, save 𝜇̂ and the p-value arising from a test of 𝐻:𝜇=0
 using 𝛼=0.05
 
 ``` r
+# write a function that generates a normal vector with n = 30, mean = 0, sd = 5
 generate_normal_fixed = function(n = 30, mean = 0, sd = 5) {
   norm_vec = rnorm(n = n, mean = mean, sd = sd)
   return (norm_vec)
 }
+#check that the function works
 generate_normal_fixed()
 ```
 
@@ -101,7 +106,7 @@ generate_normal_fixed()
     ## [26]  -0.56712096 -10.44907262   2.36263137   2.45046857  -1.28119539
 
 ``` r
-# Generate 5000 datasets
+# Generate 5000 datasets, conduct a t-test for each dataset, save the estimate and p-value
 fixed_sim_df = tibble(
   iter = 1:5000,
   data = map(1:5000, ~generate_normal_fixed(n = 30, mean = 0, sd = 5))) %>% 
@@ -148,7 +153,24 @@ sim_df = expand_grid(
   ) %>% 
   unnest(tidy_res) %>% 
   select(iter, pop_mean, estimate, p.value)
+
+sim_df
 ```
+
+    ## # A tibble: 30,000 × 4
+    ##     iter pop_mean estimate     p.value
+    ##    <int>    <dbl>    <dbl>       <dbl>
+    ##  1     1        1    1.31  0.159      
+    ##  2     1        2    1.41  0.156      
+    ##  3     1        3    2.27  0.0111     
+    ##  4     1        4    3.38  0.000575   
+    ##  5     1        5    5.35  0.00000154 
+    ##  6     1        6    6.32  0.000000256
+    ##  7     2        1    1.61  0.0621     
+    ##  8     2        2    0.983 0.150      
+    ##  9     2        3    4.69  0.00000328 
+    ## 10     2        4    5.24  0.0000496  
+    ## # ℹ 29,990 more rows
 
 Make a plot showing the proportion of times the null was rejected (the
 power of the test) on the y axis and the true value of 𝜇on the x axis.
@@ -174,15 +196,17 @@ power_df %>%
 ```
 
 ![](p8105_hw5_az2852_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+
 Power increases as effect size increases. The increase in power is sharp
-at first and then gradually slows down as power gets close to 1.
+at first as true mean increases and then slows down as power gets close
+to 1.
 
 Make a plot showing the average estimate of 𝜇̂ on the y axis and the true
-value of 𝜇 on the x axis. Make a second plot (or overlay on the first)
+value of 𝜇on the x axis. Make a second plot (or overlay on the first)
 the average estimate of 𝜇̂ only in samples for which the null was
-rejected on the y axis and the true value of 𝜇 on the x axis. Is the
+rejected on the y axis and the true value of 𝜇on the x axis. Is the
 sample average of 𝜇̂ across tests for which the null is rejected
-approximately equal to the true value of 𝜇 ? Why or why not?
+approximately equal to the true value of 𝜇? Why or why not?
 
 ``` r
 # calculate average estimates for all samples and for samples where null was rejected
@@ -214,8 +238,9 @@ ggplot(summary_df, aes(x = pop_mean)) +
     ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
     ## generated.
 
-![](p8105_hw5_az2852_files/figure-gfm/unnamed-chunk-8-1.png)<!-- --> The
-average estimate mu_hat for which the null is rejected is not
+![](p8105_hw5_az2852_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+
+The average estimate mu_hat for which the null is rejected is not
 approximately equal to the true mean. Rather, the average estimates for
 rejected samples are higher because only samples with larger estimates
 (further from 0) are more likely to reject the null hypothesis.
@@ -284,12 +309,13 @@ latitude and longitude, and disposition <chr>. There is a significant
 amount of missing data in variables victim_race, victim_age, and
 victim_sex.
 
-Describe the raw data. Create a city_state variable (e.g. “Baltimore,
-MD”) and then summarize within cities to obtain the total number of
-homicides and the number of unsolved homicides (those for which the
-disposition is “Closed without arrest” or “Open/No arrest”).
+Create a city_state variable (e.g. “Baltimore, MD”) and then summarize
+within cities to obtain the total number of homicides and the number of
+unsolved homicides (those for which the disposition is “Closed without
+arrest” or “Open/No arrest”).
 
 ``` r
+#create a city_state variable
 homicide_df = homicide_raw_df %>%
   mutate(city_state = str_c(city, state, sep = ", "))
 
@@ -345,7 +371,7 @@ tidy(prop_test_baltimore) %>%
     ##      <dbl>    <dbl>     <dbl>
     ## 1    0.646    0.628     0.663
 
-run prop.test for each of the cities in your dataset, and extract both
+Run prop.test for each of the cities in your dataset, and extract both
 the proportion of unsolved homicides and the confidence interval for
 each. Do this within a “tidy” pipeline, making use of purrr::map,
 purrr::map2, list columns and unnest as necessary to create a tidy
@@ -374,6 +400,25 @@ homicide_df %>%
     ## Caused by warning in `prop.test()`:
     ## ! Chi-squared approximation may be incorrect
 
+``` r
+results_df
+```
+
+    ## # A tibble: 51 × 4
+    ##    city_state      estimate conf.low conf.high
+    ##    <chr>              <dbl>    <dbl>     <dbl>
+    ##  1 Albuquerque, NM    0.386    0.337     0.438
+    ##  2 Atlanta, GA        0.383    0.353     0.415
+    ##  3 Baltimore, MD      0.646    0.628     0.663
+    ##  4 Baton Rouge, LA    0.462    0.414     0.511
+    ##  5 Birmingham, AL     0.434    0.399     0.469
+    ##  6 Boston, MA         0.505    0.465     0.545
+    ##  7 Buffalo, NY        0.612    0.569     0.654
+    ##  8 Charlotte, NC      0.300    0.266     0.336
+    ##  9 Chicago, IL        0.736    0.724     0.747
+    ## 10 Cincinnati, OH     0.445    0.408     0.483
+    ## # ℹ 41 more rows
+
 Create a plot that shows the estimates and CIs for each city – check out
 geom_errorbar for a way to add error bars based on the upper and lower
 limits. Organize cities according to the proportion of unsolved
@@ -381,15 +426,15 @@ homicides.
 
 ``` r
 ggplot(results_df, aes(x = reorder(city_state, estimate), y = estimate)) +
-  geom_point(color = "blue", size = 2) +  # Plot the estimated proportion as points
-  geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = 0.2) +  # Add error bars (confidence intervals)
+  geom_point(color = "blue", size = 2) +  
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high), width = 0.2) +  
   labs(
     x = "City",
     y = "Estimated Proportion of Unsolved Homicides",
     title = "Estimated Proportion of Unsolved Homicides with 95% CI"
   ) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +  # Rotate x-axis labels for readability
-  coord_flip()  # Flip the coordinates for better visibility of city names
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +  
+  coord_flip()
 ```
 
 ![](p8105_hw5_az2852_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
